# tcc-assist

./: .gitignore  AGENTS.md  README.md  STATUS.md  ai-rules.md  eslint-report.json  eslint.config.mjs  gitlog.txt  lint_log.txt  package-lock.json  package.json  tcc-saas-partner.skill  test-db.js  test-extract.ts  test-openalex.js  test-openalex10.ts  test-openalex2.js  test-openalex3.js  test-openalex4.js  test-openalex5.js  test-openalex6.js  test-openalex7.js  test-openalex8.js  test-openalex9.js  test-route.ts  typecheck_log.txt
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.aiox-core/data/: entity-registry.yaml
.codex/agents/: anti-plagio.md  orchestrator.md  redator-free.md  redator-pro.md  redator-vip.md
.codex/skills/: aiox-context.md
.codex/workflows/: tcc-generation.yaml
.github/workflows/: ci-ai.yml  ci-web.yml
apps/web/: next.config.ts  package.json
docs/: BACKLOG.md  CONTROLE-SIMPLES.md  MAPA-DO-PROJETO.md  VERCEL-QUERY.md  arquitetura_executiva.html  arquitetura_tecnica.md  audit_executivo.html  audit_tecnico.md  auth.md  chat.md  landing.md
docs/adr/: 0001-fastapi-rag-split.md  0002-pgvector.md  (+2 more)
prisma/: schema.prisma
public/: manifest.json
services/ai/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
services/ai/app/: __init__.py  main.py
services/ai/app/api/: health.py
services/ai/app/observability/: __init__.py  logging.py
services/ai/app/providers/: __init__.py
services/ai/app/quota/: __init__.py
services/ai/tests/: test_health.py
src/: middleware.ts
(+142 files in other folders)
